<resources>
    <string name="app_name">Must_Do_002</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_username">Username</string>
    <string name="to_sign_up">Not registered yet? Sign up now.</string>
    <string name="confirm_delete">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>